--- a/valuetransfer/src/main/res/values/strings.xml
+++ b/valuetransfer/src/main/res/values/strings.xml
@@ -174,6 +174,9 @@
     <string name="text_unverified">Not verified</string>
     <string name="text_verified_lower">verified</string>
     <string name="text_unverified_lower">unverified</string>
+    <string name="text_verified_info">A contact is verified when during import both the camera and NFC chip are used to ensure legitimacy of the document. When a contact is not verified, it\'s identity name below may be forged.</string>
+    <string name="text_identity_name">Identity Name</string>
+    <string name="text_identity_name_info">The identity name consists of the initials and surname of the contact that are on the official identity document. If the contact is unverified, the contact can choose it\'s own name.</string>
     <string name="text_title_transactions">Transactions</string>
     <string name="text_no_transactions">There are no transactions yet</string>
     <string name="text_including_unverified_transactions">Including Unverified Transactions</string>
@@ -410,5 +413,10 @@
     <string name="snackbar_identity_update_error">Identity couldn\'t be updated</string>
     <string name="snackbar_identity_add_cancelled">Adding identity cancelled. Without an identity you\'ll not be able to use this application.</string>
     <string name="snackbar_identity_create_error">An error occurred while creating your identity</string>
+    <string name="text_open_in_google_maps">Open in Google Maps</string>
+    <string name="text_confirm_are_you_sure">Are you sure?</string>
+    <string name="text_confirm_ok">OK</string>
+    <string name="text_confirm_cancel">CANCEL</string>
+    <string name="text_new">New</string>
 
 </resources>
