--- a/valuetransfer/src/main/res/values/strings.xml
+++ b/valuetransfer/src/main/res/values/strings.xml
@@ -365,7 +365,7 @@
     <string name="text_number_media">%d items</string>
     <string name="text_no_media">No media</string>
     <string name="text_location">Location</string>
-    <string name="text_address_not_found">No address found</string>
+    <string name="text_address_not_found">Address currently not found</string>
     <string name="text_send_current_location">Send current location</string>
     <string name="text_send_this_location">Send this location</string>
     <string name="text_you">You</string>
