--- a/data-vault/src/main/res/values/strings.xml
+++ b/data-vault/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
         <item>Country</item>
         <item>Email</item>
     </string-array>
+
+    <string-array name="access_modes">
+        <item>read</item>
+        <item>write</item>
+        <item>read+write</item>
+    </string-array>
 </resources>
