--- a/atomic-swap/src/main/res/values/strings.xml
+++ b/atomic-swap/src/main/res/values/strings.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="app_name">Atomic Swap</string>
+    <string name="title_wallet">Wallet</string>
+    <string name="title_swap">Swap</string>
+</resources>
