--- a/atomic-swap/src/main/res/values/strings.xml
+++ b/atomic-swap/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="app_name">Atomic Swap</string>
     <string name="title_wallet">Wallet</string>
     <string name="title_swap">Swap</string>
+
+    <string name="bitcoin">Bitcoin</string>
+    <string name="ethereum">Ethereum</string>
+
+    <string name="balance">Balance:</string>
+    <string name="notification_copied_key">Copied wallet public key to clipboard</string>
+
 </resources>
