--- a/freedomOfComputing/src/main/res/values/strings.xml
+++ b/freedomOfComputing/src/main/res/values/strings.xml
@@ -6,9 +6,10 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="SearchHint">Search…</string>
-    <string name="downloadsInProgress">2</string>
     <string name="torrentFileName">Another TorrentAPK</string>
     <string name="addButtonDescription">Add</string>
     <string name="progress">75</string>
+    <string name="torrentCount">%1$d torrent(s)</string>
+    <string name="downloadsInProgress">%1$d</string>
 
 </resources>
