--- a/atomic-swap/src/main/res/values/strings.xml
+++ b/atomic-swap/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="ethereum">Ethereum</string>
 
     <string name="button_make_swap">Create swap offer</string>
+    <string name="button_trade_offers_refresh">Refresh trade offers</string>
 
     <string name="balance">Balance:</string>
     <string name="notification_copied_key">Copied wallet public key to clipboard</string>
