added missing id and extracted string

--- a/atomic-swap/src/main/res/values/strings.xml
+++ b/atomic-swap/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
 
     <string name="balance">Balance:</string>
     <string name="notification_copied_key">Copied wallet public key to clipboard</string>
+    <string name="accept">Accept</string>
 
     <string-array name="currency_codes">
         <item>BTC</item>
