Add unsuccessful button and download strings

--- a/freedomOfComputing/src/main/res/values/strings.xml
+++ b/freedomOfComputing/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="progress">75</string>
     <string name="torrentCount">%1$d torrent(s)</string>
     <string name="downloadsInProgress">%1$d</string>
+    <string name="currentDownloadInProgress">%1$s</string>
+    <string name="downloadsInQueue">In queue: %1$d</string>
 
 </resources>
