--- a/atomic-swap/src/main/res/values/strings.xml
+++ b/atomic-swap/src/main/res/values/strings.xml
@@ -10,12 +10,19 @@
 
     <string name="button_make_swap">Create swap offer</string>
     <string name="button_trade_offers_refresh">Refresh trade offers</string>
+    <string name="button_accept">Accept</string>
+
+    <string name="status_open">Open</string>
+    <string name="status_in_progress">In progress</string>
+    <string name="status_completed">Completed</string>
 
     <string name="balance">Balance:</string>
     <string name="notification_copied_key">Copied wallet public key to clipboard</string>
-    <string name="accept">Accept</string>
 
     <string name="toast_refreshing_trade_offers">Refreshing trade offers…</string>
+
+    <string name="currency_code_bitcoin">BTC</string>
+    <string name="currency_code_ethereum">ETH</string>
 
     <string-array name="currency_codes">
         <item>BTC</item>
