Add trust scores database view
Signed-off-by: Jurriaan Den Toonder <1493561+Fastjur@users.noreply.github.com>

--- a/eurotoken/src/main/res/values/strings.xml
+++ b/eurotoken/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="change_name">Change name</string>
     <string name="manage_gateways">Manage gateways</string>
     <string name="toggle_demo_mode">Turn %s Demo Mode</string>
+    <string name="trust_scores_menu_item">Trustscores DB</string>
+    <string name="trust_scores_db_item_score">%d%%</string>
 </resources>
