--- a/valuetransfer/src/main/res/values/strings.xml
+++ b/valuetransfer/src/main/res/values/strings.xml
@@ -436,6 +436,7 @@
     <string name="snackbar_missing_variable">Missing variable %s</string>
     <string name="snackbar_provide_valid_public_key">Please provide a valid public key</string>
     <string name="transer_money_link_valid_iban">Please provide a valid IBAN</string>
+    <string name="transer_money_link_valid_transaction_value">Transaction amount is too high or invalid</string>
     <string name="transer_money_link_valid_amount">Please provide a valid amount</string>
     <string name="snackbar_contact_shared_to">Contact %s shared to %s</string>
     <string name="snackbar_unexpected_error_occurred">Unexpected error occurred, please try again</string>
