--- a/literaturedao/src/main/res/values/strings.xml
+++ b/literaturedao/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="litdao_permission_storage_granted">Permission has been granted</string>
+    <string name="litdao_permission_denied">Permission has been denied!</string>
 </resources>
