--- a/detoks/src/main/res/values/strings.xml
+++ b/detoks/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_activity_main_detoks">DeToks</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="select_offline_friend">Select friend</string>
+    <string name="scan">Scan</string>
+    <string name="request">Request</string>
 </resources>
