--- a/offlinemoney/src/main/res/values/strings.xml
+++ b/offlinemoney/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Offline Money</string>
+    <string name="title_activity_main_offline_money">Offline Money</string>
 </resources>
