Added maximum storage for seeding field, implemented methods to start and stop seeding and attached these to the GUI, seeding is limited according to the storage limit and bandwidth limit

--- a/detoks/src/main/res/values/strings.xml
+++ b/detoks/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_activity_main_detoks">DeToks</string>
     <string name="seeding_strategy">Seeding Strategy</string>
     <string name="leaching_strategy">Leaching Strategy</string>
+    <string name="bandwidth_day_mb">Bandwidth/day (MB)</string>
+    <string name="hash">Hash</string>
+    <string name="download">Download</string>
+    <string name="upload">Upload</string>
+    <string name="balance">Balance</string>
 </resources>
