Added loop that rechecks best strategy according to the SEEDING_LOOP_TIME const in TorrentManager and changed leach to leech

--- a/detoks/src/main/res/values/strings.xml
+++ b/detoks/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="title_activity_main_detoks">DeToks</string>
     <string name="seeding_strategy">Seeding Strategy</string>
-    <string name="leaching_strategy">Leaching Strategy</string>
+    <string name="leeching_strategy">Leeching Strategy</string>
     <string name="bandwidth_day_mb">Bandwidth per day (MB)</string>
     <string name="torrent_name">Torrent Name</string>
     <string name="download">Download</string>
