--- a/detoks/src/main/res/values/strings.xml
+++ b/detoks/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="select_offline_friend">Select friend</string>
     <string name="scan">Scan</string>
-    <string name="request">Request</string>
+    <string name="send_money">Send money</string>
 </resources>
